<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_recipe_visualization"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp80"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:layout_weight="1"
        android:background="@color/dividerColor"
        android:orientation="horizontal">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/select_ingredients_list"
            style="@android:style/ButtonBar"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingredients_button_text" />

        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="75dp"
            android:background="@color/dividerColor"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/select_steps_list"
            style="@android:style/ButtonBar"

            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/steps_button_text"


            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients_and_steps_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp10"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/ingredients_steps_load_progress_bar"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40" />

    </LinearLayout>

</LinearLayout>