...
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/step_short_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/sp20"
...
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="@dimen/dp4"
            card_view:cardElevation="@dimen/dp4">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/step_description"
                android:background="@color/cardview_light_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/sp17"
...
