<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recipe_card_view_height"
    android:layout_margin="@dimen/recipe_card_view_margin"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/recipe_card_corner_radius"
    card_view:cardElevation="@dimen/recipe_card_view_elevation">
...
            android:background="@color/colorAccent"
            card_view:layout_constraintBottom_toBottomOf="@+id/recipe_image"
            card_view:layout_constraintEnd_toEndOf="@+id/recipe_image"
            card_view:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_gravity="end|bottom"
            android:layout_height="@dimen/dp32"
            android:layout_marginEnd="@dimen/dp8"
            android:layout_marginStart="@dimen/dp8"
            android:layout_marginTop="@dimen/dp8"
...
